--- a/TopCategories/package.json
+++ b/TopCategories/package.json
@@ -14,11 +14,21 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^9.1.0",
+    "cordova-plugin-battery-status": "^2.0.3",
+    "cordova-plugin-camera": "github:apache/cordova-plugin-camera",
+    "cordova-plugin-geolocation": "github:apache/cordova-plugin-geolocation",
+    "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-battery-status": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-geolocation": {
+        "GPS_REQUIRED": "true"
+      }
     },
     "platforms": [
       "android"
