--- a/TopCategories/package.json
+++ b/TopCategories/package.json
@@ -16,8 +16,10 @@
     "cordova-android": "^9.1.0",
     "cordova-plugin-battery-status": "^2.0.3",
     "cordova-plugin-camera": "github:apache/cordova-plugin-camera",
+    "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-geolocation": "github:apache/cordova-plugin-geolocation",
     "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-vibration": "^3.1.1",
     "cordova-plugin-whitelist": "^1.3.4"
   },
   "cordova": {
@@ -28,7 +30,9 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-geolocation": {
         "GPS_REQUIRED": "true"
-      }
+      },
+      "cordova-plugin-vibration": {},
+      "cordova-plugin-dialogs": {}
     },
     "platforms": [
       "android"
